# mnovikot_test

./: .env.template  Dockerfile  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  docker-entrypoint.sh  locustfile.py  pyproject.toml
src/: main.py  worker.py
src/api/dependencies/: storage.py
src/api/errors/: http_error.py  validation_error.py
src/api/routes/: __init__.py  webhook.py
src/core/: config.py  exceptions.py  utils.py
src/db/: database.py
src/enums/: event_types.py
src/schemas/: common.py  event.py  user.py
src/services/: storage.py
tests/: mocks.py
tests/api/: test_viber_webhook.py
